--- a/css/login.css
+++ b/css/login.css
@@ -7,6 +7,7 @@
      border-radius: 10px;
      padding: 20px;
      margin: auto;
+     margin-top:50px;
      display: flex;
      flex-direction: column;
      justify-content: center;
