--- a/css/pdf.css
+++ b/css/pdf.css
@@ -1,28 +1,21 @@
-  /* Container styling */
-.container{
-    width: 90%;
-    margin: 0 auto;
-    text-align: center;
-}
-
-
 
 /* PDF container */
 .content {
-    margin-top: 30px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  width: 100%;  
 }
 
 /* Each canvas element will be rendered here */
 canvas {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: 1px solid gold;
     padding: 10px;
     border-radius: 10px;
+    margin: auto;
     margin-bottom: 15px;
     width: 100%;
-    max-width: 600px;
+    max-width: 400px;
     height: 100%;
     transition: .5s ease-in-out;
 
